--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         </li>
 
                         <li class="nav-item ms-3">
-                            <a class="nav-link custom-btn custom-border-btn btn" href="landing.html">Donate</a>
+                            <a class="nav-link custom-btn custom-border-btn btn" href="index-hi.html">हिंदी</a>
                         </li>
                     </ul>
                 </div>
