--- a/form.html
+++ b/form.html
@@ -165,7 +165,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                         </li>
 
                         <li class="nav-item ms-3">
-                            <a class="nav-link custom-btn custom-border-btn btn" href="donate.html">Donate</a>
+                            <a class="nav-link custom-btn custom-border-btn btn" href="form-hi.html">हिन्दी</a>
                         </li>
                     </ul>
                 </div>
