--- a/landing.html
+++ b/landing.html
@@ -279,7 +279,7 @@ https://templatemo.com/tm-581-kind-heart-charity
             <section class="contact">
                 <center>
                 <h1 style="color: #ecf0f1;" class="title">Akshargyan Manch</h1></center>
-                <h2 class="sub-title">Site Under Construction</h2>
+                <h2 class="sub-title">Coming Soon</h2>
             </section>
         </main>
 
