Describe the changes you made

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     <div class="col-lg-8 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
                             <i class="bi-geo-alt me-2"></i>
-                            Madhubani Bihar,847109
+                            Madhubani Bihar,847108
                         </p>
 
                         <p class="d-flex mb-0">
@@ -283,7 +283,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <div class="custom-text-box">
                                 <h2 class="mb-2">Our Story</h2>
 
-                                <h5 class="mb-3">Kind Heart Charity, Non-Profit Organization</h5>
+                                <h5 class="mb-3">Akshargyan Manch, Non-Profit Organization</h5>
 
                                 <p class="mb-0">"Akshargyan Manch" is a platform inspired by the theme "शब्द से सृजन – शिक्षा से सशक्तिकरण" (Creation through Words – Empowerment through Education). Our mission is to promote education as a tool for empowerment and transformation. Through literacy initiatives and social work, we strive to inspire individuals and communities to achieve their fullest potential. Join us in our journey to build a brighter and more empowered society through the power of knowledge and action.
 
@@ -350,9 +350,9 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                         <div class="col-lg-5 col-md-7 col-12">
                             <div class="custom-text-block">
-                                <h2 class="mb-0">Om Kumar</h2>
+                                <h2 class="mb-0">Om Kumar <br> <p style="font-size: 80%;font-weight: 600;">(Founder)</p></h2>
 
-                                <p class="text-muted mb-lg-4 mb-md-4">Founder</p>
+
 
                                 <p>This is Om Kumar currently pursuing B.Sc. (H) Mathematics at Ramjas College, University of Delhi.</p>
 
@@ -995,8 +995,9 @@ https://templatemo.com/tm-581-kind-heart-charity
                 </div>
             </section>
             
-            <a href="exam-form.html" id="spp-button" title="Apply for SPP²">Apply for SPP²</a>
+            <!-- <a href="landing.html" id="spp-button" title="Apply for SPP²">Apply for SPP²</a> -->
 
+            <a href="contents/akshargyan-manch.pdf" id="spp-button" title="Apply for SPP²">Exam Notification</a>
 
 
         </main>
@@ -1045,7 +1046,7 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                         <p class="text-white d-flex mt-3">
                             <i class="bi-geo-alt me-2"></i>
-                            Madhubani Bihar,847109
+                            Madhubani Bihar,847108
                         </p>
 
                         <a href="#" class="custom-btn btn mt-3">Get Direction</a>
