--- a/landing.html
+++ b/landing.html
@@ -172,7 +172,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     <div class="col-lg-8 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
                             <i class="bi-geo-alt me-2"></i>
-                            Madhubani Bihar,847109
+                            Madhubani Bihar,847108
                         </p>
 
                         <p class="d-flex mb-0">
@@ -244,7 +244,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                             <a class="nav-link click-scroll" href="#section_4">Volunteer</a>
                         </li> -->
 
-                        <li class="nav-item dropdown">
+                        <!-- <li class="nav-item dropdown">
                             <a class="nav-link click-scroll dropdown-toggle" href="#section_5" id="navbarLightDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">News</a>
 
                             <ul class="dropdown-menu dropdown-menu-light" aria-labelledby="navbarLightDropdownMenuLink">
@@ -252,7 +252,7 @@ https://templatemo.com/tm-581-kind-heart-charity
 
                                 <li><a class="dropdown-item" href="news-detail.html">News Detail</a></li>
                             </ul>
-                        </li>
+                        </li> -->
 
                         <li class="nav-item">
                             <a class="nav-link click-scroll" href="#section_6">Contact</a>
