--- a/form.html
+++ b/form.html
@@ -77,7 +77,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     <div class="col-lg-8 col-12 d-flex flex-wrap">
                         <p class="d-flex me-4 mb-0">
                             <i class="bi-geo-alt me-2"></i>
-                            Madhubani Bihar,847109
+                            Madhubani Bihar,847108
                         </p>
 
                         <p class="d-flex mb-0">
@@ -208,7 +208,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     </ul>
                     </div>
                     <div class="tab-content-item w-100 flex-shrink-0" id="tab3">
-                      <ul><li><a href="exam-form.html" class="Downloads">Click here to Apply online.</a></li></ul>
+                      <ul><li><a href="landing.html" class="Downloads">Click here to Apply online.</a></li></ul>
                     </div>
                   </div>
                 </div>
@@ -288,7 +288,7 @@ https://templatemo.com/tm-581-kind-heart-charity
     
                             <p class="text-white d-flex mt-3">
                                 <i class="bi-geo-alt me-2"></i>
-                                Madhubani Bihar,847109
+                                Madhubani Bihar,847108
                             </p>
     
                             <a href="#" class="custom-btn btn mt-3">Get Direction</a>
