--- a/index.html
+++ b/index.html
@@ -995,9 +995,9 @@ https://templatemo.com/tm-581-kind-heart-charity
                 </div>
             </section>
             
-            <!-- <a href="landing.html" id="spp-button" title="Apply for SPP²">Apply for SPP²</a> -->
+            <a href="exam-form.html" id="spp-button" title="Apply for SPP²">Apply for SPP²</a>
 
-            <a href="contents/akshargyan-manch.pdf" id="spp-button" title="Apply for SPP²">Exam Notification</a>
+<!--             <a href="contents/akshargyan-manch.pdf" id="spp-button" title="Apply for SPP²">Exam Notification</a> -->
 
 
         </main>
