--- a/form.html
+++ b/form.html
@@ -208,7 +208,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     </ul>
                     </div>
                     <div class="tab-content-item w-100 flex-shrink-0" id="tab3">
-                      <ul><li><a href="landing.html" class="Downloads">Click here to Apply online.</a></li></ul>
+                      <ul><li><a href="exam-form.html" class="Downloads">Click here to Apply online.</a></li></ul>
                     </div>
                   </div>
                 </div>
