--- a/form-hi.html
+++ b/form-hi.html
@@ -211,7 +211,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                     </ul>
                     </div>
                     <div class="tab-content-item w-100 flex-shrink-0" id="tab3">
-                      <ul><li><a href="landing.html" class="Downloads">ऑनलाइन आवेदन करने के लिए यहाँ क्लिक करें</a></li></ul>
+                      <ul><li><a href="exam-form.html" class="Downloads">ऑनलाइन आवेदन करने के लिए यहाँ क्लिक करें</a></li></ul>
                     </div>
                   </div>
                 </div>
