--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                                 <a href="form.html" class="d-block">
                                     <img src="images/icons/scholarship.png" class="featured-block-image img-fluid" alt="">
 
-                                    <p class="featured-block-text"><strong>Apply For SPP&sup2;</strong></p>
+                                    <p class="featured-block-text"><strong>Apply For SP&sup2;</strong></p>
 
                                 </a>
                             </div>
@@ -995,7 +995,7 @@ https://templatemo.com/tm-581-kind-heart-charity
                 </div>
             </section>
             
-            <a href="exam-form.html" id="spp-button" title="Apply for SPP²">Apply for SPP²</a>
+            <a href="exam-form.html" id="spp-button" title="Apply for SPP²">Apply for SP²</a>
 
 <!--             <a href="contents/akshargyan-manch.pdf" id="spp-button" title="Apply for SPP²">Exam Notification</a> -->
 
