--- a/index-hi.html
+++ b/index-hi.html
@@ -889,7 +889,7 @@ https://templatemo.com/tm-581-kind-heart-charity
             </section>
             
             
-            <a href="exam-form.html" id="spp-button" title="SPP² के लिए आवेदन करें">SPP² के लिए आवेदन करें</a>
+            <a href="exam-form.html" id="spp-button" title="SPP² के लिए आवेदन करें">SP² के लिए आवेदन करें</a>
 
 <!--             <a href="contents/akshargyan-manch.pdf" id="spp-button" title="SPP² के लिए आवेदन करें">परीक्षा अधिसूचना</a> -->
 
