--- a/index-hi.html
+++ b/index-hi.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html lang="en">
     <head>
-            <head>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4721420834810452"
+     crossorigin="anonymous"></script>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
